feat: adds data-property data-cy="toggle-passwords-button" into index.html

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
         <form onsubmit="return false" class="passwords">
             <input type="password" name="" id="pw1">
             <input type="password" name="" id="pw2">
-            <button>Show Password</button>
+            <button data-cy="toggle-passwords-button">Show Passwords</button>
         </form>
         <ul class="checks">
             <li id="equal" class="checks__check">Passwords are equal</li>
